tests/integration/errors/const-assign-array.it
Assign const array

- compilation error
=========
void main() {
    const int a[2] = {1, 2};

    a[1] = 3;
}
=========
<stdin>:4: error: assignement of constant variable 'a'
